# dsrs

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  clippy.toml  justfile
.github/: dependabot.yml
.github/workflows/: check-and-lint.yml  release.yml  security.yml  test.yml
src/: client.rs  errors.rs  lib.rs  main.rs  modules.rs  signatures.rs
